Bug 104717 - Rocket League: grass rendering broken with nir
Summary: Rocket League: grass rendering broken with nir
Status: VERIFIED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/radeonsi (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Default DRI bug account
QA Contact: Default DRI bug account
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-01-21 19:38 UTC by Gregor Münch
Modified: 2018-03-10 14:19 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Gregor Münch 2018-01-21 19:38:46 UTC
Im on a Radeon 7970 but Im running the game with the nir stack, so I think this is a problem for Intel users too.

Basically using nir reintroduces:
https://bugs.freedesktop.org/show_bug.cgi?id=100070

Which probably mean that Intel needs the same workaround. Also consider Witcher 2 and ARMA 3 for the fix.
Comment 1 Kenneth Graunke 2018-01-22 08:37:12 UTC
I bet the ac/nir code just doesn't respect the driconf option (which i965 doesn't use).  Moving the bug to radeonsi for now and assigning to Tim.
Comment 2 Gregor Münch 2018-03-07 21:29:23 UTC
Looks like the assigning didnt work?
Did that now, I hope you dont mind.

Honestly I dont understand why Intel isnt affected. As far as I understood the old problem: mesa basically treats OpenGL spec right but nvidia was faster implementing it thus created a de-facto standard.
Now porting companys agree its wrong but dont want to change treatment because 80% of their users using nvidia binary blob.
To circumvent the problem, a override was created. Fixing the issue for radeon.
I mean, I understand that the RadeonSI NIR port doesnt respect the dri override yet. But I dont understand that Intel isnt using the dri override at all. Which would mean that if Intel treats the opengl spec in the same way like RadeonSI did but doesnt make use of the override, the problems in those games still appear for Intel users.
Comment 3 Timothy Arceri 2018-03-07 23:06:46 UTC
This series should fix the regression. Thanks for reporting it.

https://patchwork.freedesktop.org/series/39565/
Comment 4 Timothy Arceri 2018-03-08 00:35:16 UTC
This should be fixed by:

commit 0c90264da4139805d34f530485a678c53809932e
Author: Timothy Arceri <tarceri@itsqueeze.com>
Date:   Thu Mar 8 09:46:42 2018 +1100

    ac/radeonsi: add emit_kill to the abi
    
    This should fix a regression with Rocket League grass rendering
    on the NIR backend.
    
    Reviewed-by: Marek Olšák <marek.olsak@amd.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=104717

If you are still having problems feel free to reopen the bug.
Comment 5 Gregor Münch 2018-03-10 14:19:32 UTC
Yes, its fixed. Thank you!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.